World Editor/ Add localization strings tool. Fix bugs in creating characters.

--- a/muddery/worlddata/data/languages/zh-cn/local_strings.csv
+++ b/muddery/worlddata/data/languages/zh-cn/local_strings.csv
@@ -105,3 +105,37 @@ category,origin,local
 ,"LEVEL","等级"
 ,"EXP","经验"
 ,"HP","生命"
+,"Incorrect password.","密码错误。"
+,"Please select a character","请选择一个角色。"
+,"MAX EXP","最大经验值"
+,"Can not cast this skill.","无法施放这个技能。"
+,"You can not access this channel.","你无法使用这个频道。"
+,"{rCould not unpuppet from {c%s{n: %s","{r无法登出角色 {c%s{n: %s"
+,"You should select a skill to cast.","你必须选择一个技能来施放。"
+,"Can not find this shop.","无法找到这个商店。"
+,"{rA character named '{w%s{r' already exists.{n","{r名为'{w%s{r'的角色已经存在了。{n"
+,"Not enough number.","数量不足。"
+,"GOTO","前往"
+,"{rYou cannot become {C%s{n: %s","{r你无法成为 {C%s{n: %s"
+,"Character '%s' was permanently deleted.","角色 '%s' 已经被永久删除了。"
+,"You should shopping in someplace.","你必须在某个地方购物。"
+,"Can not buy this goods.","无法购买这个商品。"
+,"You should puppet a character.","你必须操纵一个角色。"
+,"That is not a valid character choice.","你选择的不是一个有效的角色。"
+,"You may only create a maximum of %i characters.","你最多只能创建 %i 个角色。"
+,"MAX HP","最大生命值。"
+,"Name should not be empty.","名字不得为空。"
+,"You should give up a quest.","你需要放弃一个任务。"
+,"You can not talk in this channel.","你无法在这个频道中说话。"
+,"Can not find this object.","无法找到这个物体。"
+,"You should buy something.","你需要买某样东西。"
+,"Can not find exit.","无法找到出口。"
+,"You should discard something.","你需要丢弃某样东西。"
+,"{RYou made too many connection attempts. Try again in a few minutes.{n","{R你尝试连接的次数过多，请在几分钟之后重试。{n"
+,"Please input password.","请输入密码。"
+,"Data applied.","数据已应用。"
+,"You should give the character a name.","你需要给角色一个名字。"
+,"Can not find this goods.","无法找到这件商品。"
+,"There was an error creating the Player: %s","创建玩家时出错：%s"
+,"You have no such character to delete.","你没有这个角色。"
+,"Aborting - there are two characters with the same name. Ask an admin to delete the right one.","终止：你有两个同名的角色，请联系管理员删除其中的一个角色。"
