Add descriptions on conditions. Fix bugs in statements and client's dialogues.

--- a/muddery/worlddata/data/languages/zh-cn/fields.csv
+++ b/muddery/worlddata/data/languages/zh-cn/fields.csv
@@ -92,6 +92,7 @@ field_world_objects,"name","名称"
 field_world_objects,"typeclass","类型"
 field_world_objects,"desc","描述"
 field_world_objects,"location","位置"
+field_world_objects,"action","动作"
 field_world_objects,"condition","条件"
 field_world_objects,"icon","图标"
 field_world_npcs,"key","标识"
