--- a/muddery/worlddata/data/languages/zh-cn/help_text.csv
+++ b/muddery/worlddata/data/languages/zh-cn/help_text.csv
@@ -91,6 +91,7 @@ help_world_objects,"name","游戏中显示出的物体名称。"
 help_world_objects,"typeclass","物体的类型。"
 help_world_objects,"desc","游戏中显示的物体描述信息。"
 help_world_objects,"location","物体所在的房间。"
+help_world_objects,"action","对物体执行的动作。"
 help_world_objects,"condition","满足这个条件时，物体会在房间中显示出来。"
 help_world_objects,"icon","游戏中显示的图标。"
 help_world_npcs,"key","NPC的标识，必须在所有数据中保持唯一。"
