NPC can fight. Fix some bugs in setting object's action.

--- a/muddery/worlddata/data/languages/zh-cn/local_strings.csv
+++ b/muddery/worlddata/data/languages/zh-cn/local_strings.csv
@@ -3,8 +3,8 @@ category,origin,local
 ,"You have no location to look at!","你没有看任何地方！"
 ,"Can not find '%s'.","无法找到'%s'"
 ,"Should appoint an exit to go.","必须指定要去的出口。"
-,"TALK","交谈"
-,"Talk","交谈"
+,"TALK","对话"
+,"Talk","对话"
 ,"Can not find it.","无法找到它。"
 ,"You should talk to someone.","你需要指定想要交谈的对象。"
 ,"Can not find the one to talk.","无法找到交谈的对象。"
