Add honour combat.

--- a/muddery/worlddata/data/languages/zh-cn/fields.csv
+++ b/muddery/worlddata/data/languages/zh-cn/fields.csv
@@ -187,6 +187,8 @@ field_skills,"condition","施放条件"
 field_skills,"function","技能函数"
 field_skills,"effect","技能效果"
 field_skills,"icon","图标"
+field_skills,"main_type","主类型"
+field_skills,"sub_type","次类型"
 field_default_skills,"character","角色模版"
 field_default_skills,"skill","技能标识"
 field_quests,"key","标识"
