Fix bugs in auto casting skills. Modify the combat view in the webclient.

--- a/muddery/worlddata/data/languages/zh-cn/local_strings.csv
+++ b/muddery/worlddata/data/languages/zh-cn/local_strings.csv
@@ -27,10 +27,10 @@ category,origin,local
 ,"Can not take off %s.","无法取下%s。"
 ,"Can not take off this equipment.","无法取下这件装备。"
 ,"Taken off!","已取下！"
-,"This skill is not ready yet!","该技能还没有准备好！"
+,"{c%s{n is not ready yet!","{c%s{n还没有准备好！"
 ,"Can not find this skill!","无法找到该技能！"
 ,"Can not cast this skill!","无法施放该技能！"
-,"This is a passive skill!","这是被动技能！"
+,"{c%s{n is a passive skill!","{c%s{n是被动技能！"
 ,"CAST","施放"
 ,"Cast","施放"
 ,"You do not have this skill.","你没有这项技能。"
@@ -144,3 +144,4 @@ category,origin,local
 ,"Fight of Honour","荣誉之战"
 ,"Can not make match.","无法匹配战斗。"
 ,"The honour hall is now opened.","荣誉大厅已开放。"
+,"Global cooling down!","公共CD冷却中。"
