--- a/muddery/worlddata/data/languages/zh-cn/local_strings.csv
+++ b/muddery/worlddata/data/languages/zh-cn/local_strings.csv
@@ -84,8 +84,7 @@ category,origin,local
 ,"Give Up","放弃"
 ,"You are attacking {c%s{n! You are in combat.","你正在攻击{c%s{n！你进入了战斗。"
 ,"{c%s{n is attacking you! You are in combat.","{c%s{n正在攻击你！你进入了战斗。"
-,"%(c)s tried to escape, but failed.","%(c)s想要逃跑，但是失败了。"
-,"%(c)s tried to escape. Succeeded!","%(c)s想要逃跑。成功了！"
+,"%(c)s tried to escape. ","%(c)s想要逃跑。"
 ,"%s hitted %s.","%s打了%s。"
 ,"%s lost %s HPs.","%s损失了%s点生命。"
 ,"%s healed %s HPs.","%s治疗了%s点生命。"
@@ -148,3 +147,8 @@ category,origin,local
 ,"{object} is leaving {origin}, heading for {destination}.","{object}离开{origin}去往{destination}。"
 ,"{object} arrives to {destination} from {origin}.","{object}从{origin}来到{destination}。"
 ,"{object} arrives to {destination}.","{object}来到{destination}。"
+,"Succeeded!","成功了！"
+,"Failed.","失败了。"
+,"Healed %s by %d points.","治愈了%s %d点。"
+,"Hit %s by %d points.","击伤了%s %d点。"
+,"Raised %s's max HP by %d points.","提升了%s的最大生命值%d点。"
