--- a/muddery/worlddata/data/languages/zh-cn/local_strings.csv
+++ b/muddery/worlddata/data/languages/zh-cn/local_strings.csv
@@ -149,6 +149,6 @@ category,origin,local
 ,"{object} arrives to {destination}.","{object}来到{destination}。"
 ,"Succeeded!","成功了！"
 ,"Failed.","失败了。"
-,"Healed %s by %d points.","治愈了%s %d点。"
-,"Hit %s by %d points.","击伤了%s %d点。"
-,"Raised %s's max HP by %d points.","提升了%s的最大生命值%d点。"
+,"Healed %s by %d points.","恢复%s %d点生命。"
+,"Hit %s by %d points.","伤害%s %d点生命。"
+,"Raised %s's max HP by %d points.","提升%s的最大生命值%d点。"
