Upgrade to version 0.2.9. Fix some bugs. Modify the map in the webclient.

--- a/muddery/worlddata/data/languages/zh-cn/fields.csv
+++ b/muddery/worlddata/data/languages/zh-cn/fields.csv
@@ -14,6 +14,7 @@ field_game_settings,"default_player_home_key","玩家默认位置"
 field_game_settings,"default_player_character_key","默认玩家角色"
 field_game_settings,"map_room_size","地图房间尺寸"
 field_game_settings,"map_scale","地图比例"
+field_game_settings,"map_room_box","地图房间外框"
 field_class_categories,"key","标识"
 field_class_categories,"name","名称"
 field_class_categories,"desc","描述"
